# VisionUtils

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
common_utils/debug/: common_utils_debug.hpp  pcdl_debug.hpp
common_utils/error_code/: pcdl_error_code.hpp
common_utils/time/: timer.hpp
cv_utils/aruco/: cv_utils_aruco.hpp
demo/: CMakeLists.txt
demo/common_utils/: CMakeLists.txt
demo/common_utils/debug/: CMakeLists.txt
demo/common_utils/error_code/: CMakeLists.txt  PORTING_GUIDE.md  QUICK_REFERENCE.md  README.md  comparison_example.cpp  config_template.hpp  example_usage.cpp  main.cpp  test_error_code.cpp
demo/common_utils/timer/: main.cpp
demo/cv_utils/: CMakeLists.txt
demo/cv_utils/aruco/: CMakeLists.txt  main.cpp
demo/data/: 2.txt
demo/debug/: main.cpp
demo/demo_XX/: CMakeLists.txt  main.cpp
demo/pcl_utils/: CMakeLists.txt
demo/pcl_utils/data/: 1.txt
demo/pcl_utils/segmentation/: main.cpp
demo/pcl_utils/visualization/: CMakeLists.txt  SHAPES_USAGE.md  main.cpp  shapes_demo.cpp
demo/pcl_utils/visualization/pick_roi/: CMakeLists.txt  main.cpp
demo/pcl_utils/visualization/vis/: CMakeLists.txt  SHAPES_PERSISTENCE.md  shapes_demo.cpp  shapes_persistence_demo.cpp
demo/segmentation/: CMakeLists.txt  main.cpp
demo/visualization/: CMakeLists.txt  main.cpp
demo/visualization/data/: 1.txt  2.txt
io/: CMakeLists.txt
io/include/: pcdl_io_txt.h  pcdl_io_txt_export.h  txt_io.h
io/src/: pcdl_io_txt.cpp  txt_io.cpp
pcdl/segmentation/: pcdl_clusters.hpp  sac_segment.hpp
pcdl/visualization/: pcdl_visualization.hpp
pcl_utils/align/: align.hpp
pcl_utils/common/: pcl_utils_cloud_safety.hpp
pcl_utils/filters/: filters.hpp
pcl_utils/io/: pcl_utils_io_txt.hpp
pcl_utils/visualization/: pcl_utils_vis_container.hpp  pcl_utils_vis_events.hpp
visualization/: CMakeLists.txt
visualization/include/: pcdl_visualization.h
visualization/src/: pcdl_visualization.cpp
